--- a/FTWeb/View_Mobile/WX/hd/dbqb.html
+++ b/FTWeb/View_Mobile/WX/hd/dbqb.html
@@ -64,7 +64,7 @@ initial-scale=1,maximum-scale=1,user-scalable=no">
                     </ul>
                 </div>
             </div>
-            <a class="gojoin" href="buygoods.html">我要夺宝</a>
+            <a class="gojoin" ms-attr="{href:'createteam.html?id='+el.ID}" >我要夺宝</a>
         </li>
     </ul>
     <nav class="mui-bar mui-bar-tab">
