--- a/FTWeb/View_Mobile/WX/hd/dbqb.html
+++ b/FTWeb/View_Mobile/WX/hd/dbqb.html
@@ -50,7 +50,7 @@ initial-scale=1,maximum-scale=1,user-scalable=no">
                     </ul>
                 </div>
             </div>
-            <a class="gojoin" href="buygoods.html" style="    margin-top: 30px !important;">我要夺宝</a>
+            <a class="gojoin" ms-attr="{href:'createteam.html?id='+el.ID}" style="margin-top: 30px !important;">我要夺宝</a>
         </li>
     </ul>
     <nav class="mui-bar mui-bar-tab">
