--- a/FTWeb/View_Mobile/WX/hd/myteam.html
+++ b/FTWeb/View_Mobile/WX/hd/myteam.html
@@ -28,18 +28,18 @@
                     <p class="mui-progressbar mui-progressbar-in" data-progress="60"><span  :css="{transform: 'translate3d(-'+@el.YZTRS/@el.CTRS*100 + '%, 0px, 0px)'}"></span></p>
                     <ul class="Pro-bar-li clearboth">
                         <li class="P-bar01"><em>{{el.YZTRS}}</em>已参与</li>
-                        <li class="P-bar02"  ms-if="el.iskj=='N'"><em>{{el.CTRS-el.YZTRS}}</em>还差</li>
+                        <li class="P-bar02"  ms-visible="el.iskj=='N'"><em>{{el.CTRS-el.YZTRS}}</em>还差</li>
                         <li class="P-bar03"><em>{{el.CTRS}}</em>总需人次</li>
                     </ul>
                 </div>
                 <div class="clearboth"></div>
 
-                <marquee class="marquee" ms-if="el.iskj=='Y'">恭喜{{el.zjuserphone}}中奖</marquee>
-                <a :attr="{href:'igkbet.html?ztid='+@el.ID}" ms-if="el.iskj=='Y'">
+                <marquee class="marquee" ms-visible="el.iskj=='Y'">恭喜{{el.zjuserphone}}中奖</marquee>
+                <a :attr="{href:'igkbet.html?ztid='+@el.ID}" ms-visible="el.iskj=='Y'">
                     <div class="getJoin">查看中奖</div>
                 </a>
-                <a class="getJoin" style="width: 40%; float: left;" :attr="{href:'igkbet.html?ztid='+@el.ID}" ms-if="el.iskj=='N'">查看队员</a>
-                <a class="getJoin" style="width: 40%; float: right;" ms-if="el.iskj=='N'">拼手气</a>
+                <a class="getJoin" style="width: 40%; float: left;" :attr="{href:'igkbet.html?ztid='+@el.ID}" ms-if="visible.iskj=='N'">查看队员</a>
+                <a class="getJoin" style="width: 40%; float: right;" ms-visible="el.iskj=='N'">拼手气</a>
 
             </div>
 
