--- a/FTWeb/View_Mobile/WX/hd/myteam.html
+++ b/FTWeb/View_Mobile/WX/hd/myteam.html
@@ -38,7 +38,7 @@
                 <a :attr="{href:'igkbet.html?ztid='+@el.ID}" ms-visible="el.iskj=='Y'">
                     <div class="getJoin">查看中奖</div>
                 </a>
-                <a class="getJoin" style="width: 40%; float: left;" :attr="{href:'igkbet.html?ztid='+@el.ID}" ms-if="visible.iskj=='N'">查看队员</a>
+                <a class="getJoin" style="width: 40%; float: left;" :attr="{href:'igkbet.html?ztid='+@el.ID}" ms-visible="el.iskj=='N'">查看队员</a>
                 <a class="getJoin" style="width: 40%; float: right;" ms-visible="el.iskj=='N'">拼手气</a>
 
             </div>
