--- a/FTWeb/View_Mobile/WX/hd/dbqb.html
+++ b/FTWeb/View_Mobile/WX/hd/dbqb.html
@@ -9,6 +9,11 @@ initial-scale=1,maximum-scale=1,user-scalable=no">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <link rel="stylesheet" href="css/mui.min.css">
     <link rel="stylesheet" href="css/app.css">
+    <style>
+        .ms-controller {
+            visibility: hidden;
+        }
+    </style>
 </head>
 
 <body ms-controller="dnqbview">
