--- a/FTWeb/View_Mobile/WX/hd/buygoods.html
+++ b/FTWeb/View_Mobile/WX/hd/buygoods.html
@@ -44,7 +44,7 @@
      <input type="text" class="numCard" id="payNum" ms-duplex="@Total">
      <button class="increase" ms-click="@Plus()">+</button>
  </nav>
-
+    <div style="margin-bottom:50px;"></div>
 <nav class="mui-bar mui-bar-tab">
    <a class="btnshare"><span class="mui-tab-label">共计:<i id="totprice">{{@SumPrice}}</i><i>元</i>
    </span></a>
